--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
     </repository>
   </repositories>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-bom</artifactId>
+        <type>pom</type>
+        <version>6.0.0.Final</version>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+
   <scm>
     <connection>scm:git:git@github.com:droolsjbpm/drools.git</connection>
     <developerConnection>scm:git:git@github.com:droolsjbpm/drools.git</developerConnection>
