--- a/drools-compiler/pom.xml
+++ b/drools-compiler/pom.xml
@@ -11,7 +11,7 @@
 
   <artifactId>drools-compiler</artifactId>
   <packaging>bundle</packaging><!-- bundle = jar + OSGi metadata -->
-  <version>6.0.0.Final-jahia1</version>
+  <version>6.0.0.Final-jahia2-SNAPSHOT</version>
 
   <name>Drools :: Compiler</name>
 
