--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /local
 
 # Eclipse, Netbeans and IntelliJ files
-/.*
 !.gitignore
 /nbproject
 /*.ipr
@@ -11,3 +10,4 @@
 
 # Repository wide ignore mac DS_Store files
 .DS_Store
+.idea
