TECH-1333 - Update scm config (#2)
* TECH-1333 - Update scm config

* Update pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <description>
         Drools Expert is the rule engine and Drools Fusion does complex event processing (CEP).
     </description>
-
+    
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -43,9 +43,10 @@
 
     <scm>
         <connection>scm:git:git@github.com:Jahia/drools.git</connection>
+        <url>scm:git:git@github.com:Jahia/drools.git</url>
         <developerConnection>scm:git:git@github.com:Jahia/drools.git</developerConnection>
-        <url>https://github.com/Jahia/drools</url>
     </scm>
+    
     <build>
         <plugins>
             <plugin>
