BACKLOG-21146 Update release workflow

--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -15,7 +15,7 @@ jobs:
     # downloading the entire world when building.
     # More on https://github.com/Jahia/cimg-mvn-cache
     container:
-      image: jahia/cimg-mvn-cache:ga_cimg_openjdk_8.0.312-node
+      image: jahia/cimg-mvn-cache:ga_cimg_openjdk_11.0.20-node
       credentials:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -36,8 +36,8 @@ jobs:
       - uses: jahia/jahia-modules-action/release@v2
         name: Release Module
         with:
-          github_slug: Jahia/jcontent
-          primary_release_branch: master
+          github_slug: Jahia/drools
+          primary_release_branch: 6.0.0.Final-jahia
           release_id: ${{ github.event.release.id }}
           release_version: ${{ github.event.release.tag_name }}
           github_api_token: ${{ secrets.GH_API_TOKEN }}
