--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>kie-parent-with-dependencies</artifactId>
         <version>6.0.0.Final</version>
     </parent>
-    <version>6.0.0.Final-jahia1-SNAPSHOT</version>
+    <version>6.0.0.Final-jahia1</version>
     <groupId>org.drools</groupId>
     <!-- TODO rename to drools once parent pom has been moved -->
     <artifactId>drools-multiproject</artifactId>
@@ -98,6 +98,11 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
             </plugin>
         </plugins>
     </build>
