--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>kie-parent-with-dependencies</artifactId>
         <version>6.0.0.Final</version>
     </parent>
-    <version>6.0.0.Final-jahia1-SNAPSHOT</version>
+    <version>6.0.0.Final-jahia1</version>
     <groupId>org.drools</groupId>
     <!-- TODO rename to drools once parent pom has been moved -->
     <artifactId>drools-multiproject</artifactId>
