--- a/pom.xml
+++ b/pom.xml
@@ -104,18 +104,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.0.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-api</artifactId>
-                        <version>2.0.1</version>
-                     </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>2.0.1</version>
-                    </dependency>
-                </dependencies>
+                <configuration>
+                    <pushChanges>true</pushChanges>
+                </configuration>
             </plugin>
         </plugins>
     </build>
